[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-ai-agents-business"
version = "0.1.0"
description = "Curated list of tools, case studies, and ROI data by business domain."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/awesome-ai-agents-business"
Issues = "https://github.com/erron-ai/awesome-ai-agents-business/issues"

[project.scripts]
awesome-ai-agents-business = "awesome_ai_agents_business.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
